--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,48 +1,48 @@
 <%= render "blogs/navbar" %>
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card mb-4">
-          <div class="card-body">
-            <img src=<%= profile_picture_url %> alt="User Profile" class="img-fluid rounded-circle mb-3">
-            <h4 style= 'display: inline' class="text-dark card-title"><%= user.username.titleize %></h4>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card mb-4">
+        <div class="card-body">
+          <img src=<%= profile_picture_url %> alt="User Profile" class="img-fluid rounded-circle mb-3">
+          <h4 style= 'display: inline' class="text-dark card-title"><%= user.username.titleize %></h4>
 
-            <%= (@profile.user_id == @current_user.id) ? (link_to "Edit", edit_user_path, class: "btn btn-outline-success ms-2", style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;") : "" %>
-            <%= link_to "Blogs: #{user.blogs.size}", "#users_blogs", class: "mb-1 mt-2 text-dark", style: "display: block; text-decoration: none" %>
-            <%= link_to "Followers: #{user.followers.count("*")}", followers_profile_path(user.username), class: "mb-1 text-dark", style: "display: block; text-decoration: none" %>
-            <%= link_to "Following: #{user.following.count("*")}", following_profile_path(user.username), class: "mb-1 text-dark", style: "display: block; text-decoration: none" %>
+          <%= (@profile.user_id == @current_user.id) ? (link_to "Edit", edit_user_path, class: "btn btn-outline-success ms-2", style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;") : "" %>
+          <%= link_to "Blogs: #{user.blogs.size}", "#users_blogs", class: "mb-1 mt-2 text-dark", style: "display: block; text-decoration: none" %>
+          <%= link_to "Followers: #{user.followers.count("*")}", followers_profile_path(user.username), class: "mb-1 text-dark", style: "display: block; text-decoration: none" %>
+          <%= link_to "Following: #{user.following.count("*")}", following_profile_path(user.username), class: "mb-1 text-dark", style: "display: block; text-decoration: none" %>
 
-            <% unless @profile.user_id == @current_user.id %>
-              <% if find_follow %>
-                <%= link_to "Unfollow", (follow_path + "?id=#{@follow.id}"), data: { turbo_method: "delete" }, class: "mt-2 btn btn-danger" %>
-              <% else %>
-                <%= link_to "Follow", (follow_path + "?user_id=#{@profile.user_id}"), data: { turbo_method: "post" }, class: "mt-2 btn btn-success" %>
-              <% end %>
+          <% unless @profile.user_id == @current_user.id %>
+            <% if find_follow %>
+              <%= link_to "Unfollow", (follow_path + "?id=#{@follow.id}"), data: { turbo_method: "delete" }, class: "mt-2 btn btn-danger" %>
             <% else %>
-              <%= link_to "Edit Profile", edit_profile_path(user.username), class: "mt-2 btn btn-secondary" %>
+              <%= link_to "Follow", (follow_path + "?user_id=#{@profile.user_id}"), data: { turbo_method: "post" }, class: "mt-2 btn btn-success" %>
             <% end %>
-          </div>
+          <% else %>
+            <%= link_to "Edit Profile", edit_profile_path(user.username), class: "mt-2 btn btn-secondary" %>
+          <% end %>
         </div>
       </div>
-      <div class="col-md-8">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Personal Details</h5>
-            <p class="card-text"><strong>Name:</strong> <%= full_name.titleize %></p>
-            <p class="card-text"><strong>Email:</strong> <%= user.email %></p>
-            <p class="card-text"><strong>DOB:</strong> <%= @profile.date_of_birth %></p>
-            <p class="card-text"><strong>About:</strong> <%= @profile.about %></p>
-          </div>
+    </div>
+    <div class="col-md-8">
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Personal Details</h5>
+          <p class="card-text"><strong>Name:</strong> <%= full_name.titleize %></p>
+          <p class="card-text"><strong>Email:</strong> <%= user.email %></p>
+          <p class="card-text"><strong>DOB:</strong> <%= @profile.date_of_birth %></p>
+          <p class="card-text"><strong>About:</strong> <%= @profile.about %></p>
         </div>
+      </div>
 
-        <div class="card mb-4" id="users_blogs">
-          <div class="card-body">
-            <h4 class="card-title">User's Blogs</h4>
-            <div class="list-group">
-              <%= render user.blogs %>
-            </div>
+      <div class="card mb-4" id="users_blogs">
+        <div class="card-body">
+          <h4 class="card-title">User's Blogs</h4>
+          <div class="list-group">
+            <%= (@profile.user_id == @current_user.id) ? render(user.blogs) : render(user.blogs.visible) %>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
