--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,13 +1,13 @@
 <%= render "navbar" %>
-
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-8">
       <%= render @blogs %>
     </div>
     <div class="col-md-4 text-end">
-      <%= form_with url: search_blogs_path, class: "form-inline my-2 my-lg-0", method: "get" do |form| %>
+      <%= form_with url: search_path, class: "form-inline my-2 my-lg-0", method: "get" do |form| %>
         <%= form.text_field :key, placeholder: "Search", class: "form-control" %>
+        <%= form.select :option, ["User", "Blog"], selected: "Blog", class: "form-select" %>
         <%= form.submit "Search", class: "btn btn-outline-primary" %>
       <% end %>
     </div>
