--- a/app/views/profiles/search_result.html.erb
+++ b/app/views/profiles/search_result.html.erb
@@ -2,7 +2,7 @@
 <ul class="list-group">
   <% @profiles.each do |profile| %>
     <li class="list-group-item">
-      <img src= <%= pp_url(profile) %> alt="Author Profile" width="50" height="50" class="rounded-circle me-2">
+      <img src= <%= profile_picture_url(profile) %> alt="Author Profile" width="50" height="50" class="rounded-circle me-2">
       <%= link_to profile.first_name + " " + profile.last_name + " (" + profile.username + ")", profile_path(profile.user.username), class: "text-secondary link-offset-2 link-underline link-underline-opacity-0" %>
     </li>
   <% end %>
