--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,9 +6,9 @@
     </div>
     <div class="col-md-4 text-end">
       <%= form_with url: search_path, class: "form-inline my-2 my-lg-0", method: "get" do |form| %>
-        <%= form.text_field :key, placeholder: "Search", class: "form-control" %>
-        <%= form.select :option, ["User", "Blog"], selected: "Blog", class: "form-select" %>
-        <%= form.submit "Search", class: "btn btn-outline-primary" %>
+        <%= form.text_field :key, placeholder: "Search", class: "form-control", required: true %>
+        <%= form.select :option, ["User", "Blog"], selected: "Blog", class: "form-control" %>
+        <%= form.submit "Search", class: "btn btn-outline-success" %>
       <% end %>
     </div>
   </div>
