--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -18,10 +18,10 @@
     <% end %>
 
     <div class="d-flex align-items-center my-3">
-      <img src= <%= blog_profile_picture_url(@blog) %> alt="Author Profile" width="100" height="100" class="rounded-circle me-2">
+      <img src= <%= profile_picture_url(@blog.user.profile) %> alt="Author Profile" width="100" height="100" class="rounded-circle me-2">
       <h5 class="card-title">
         <p>Writer:</p>
-        <%= link_to "#{blog_full_name(@blog)}", profile_path(@blog.user.username), class: "link-offset-2 text-success" %>
+        <%= link_to writer_full_name(@blog), profile_path(@blog.user.username), class: "link-offset-2 text-success" %>
       </h5>
     </div>
   </div>
