--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,10 +4,14 @@
     <div class="col-md-4">
       <div class="card mb-4">
         <div class="card-body">
-          <img src=<%= profile_picture_url %> alt="User Profile" class="img-fluid rounded-circle mb-3">
+          <img src=<%= profile_picture_url(@profile) %> alt="User Profile" class="img-fluid rounded-circle mb-3">
           <h4 style= 'display: inline' class="text-dark card-title"><%= user.username.titleize %></h4>
 
-          <%= (@profile.user_id == @current_user.id) ? (link_to "Edit", edit_user_path, class: "btn btn-outline-success ms-2", style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;") : "" %>
+          <% if @profile.user_id == @current_user.id %>
+            <%= link_to "Edit", edit_user_path, class: "btn btn-outline-success ms-2", style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;" %>
+            <%= link_to "Delete", confirm_password_user_path, class: "btn btn-outline-danger", style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;" %>
+          <% end %>
+
           <%= link_to "Blogs: #{user.blogs.size}", "#users_blogs", class: "mb-1 mt-2 text-dark", style: "display: block; text-decoration: none" %>
           <%= link_to "Followers: #{user.followers.count("*")}", followers_profile_path(user.username), class: "mb-1 text-dark", style: "display: block; text-decoration: none" %>
           <%= link_to "Following: #{user.following.count("*")}", following_profile_path(user.username), class: "mb-1 text-dark", style: "display: block; text-decoration: none" %>
@@ -24,10 +28,11 @@
         </div>
       </div>
     </div>
+
     <div class="col-md-8">
       <div class="card mb-3">
         <div class="card-body">
-          <h5 class="card-title">Personal Details</h5>
+          <h4 class="card-title">Personal Details</h4>
           <p class="card-text"><strong>Name:</strong> <%= full_name.titleize %></p>
           <p class="card-text"><strong>Email:</strong> <%= user.email %></p>
           <p class="card-text"><strong>DOB:</strong> <%= @profile.date_of_birth %></p>
