--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,6 +3,9 @@
   <div class="row">
     <div class="col-md-8">
       <%= render @blogs %>
+      <div class="text-center">
+        <%= paginate @blogs %>
+      </div>
     </div>
     <div class="col-md-4 text-end">
       <%= form_with url: search_path, class: "form-inline my-2 my-lg-0", method: "get" do |form| %>
