--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -13,10 +13,10 @@
     <% end %>
 
     <div class="d-flex align-items-center my-3">
-      <img src= <%= blog_profile_picture_url(@comment) %> alt="Author Profile" width="100" height="100" class="rounded-circle me-2">
+      <img src= <%= profile_picture_url(@comment.user.profile) %> alt="Author Profile" width="100" height="100" class="rounded-circle me-2">
       <h6 class="card-title">
         <p>Commenter:</p>
-        <%= link_to "#{blog_full_name(@comment)}", profile_path(@comment.user.username), class: "link-offset-2 text-success" %>
+        <%= link_to "#{writer_full_name(@comment)}", profile_path(@comment.user.username), class: "link-offset-2 text-success" %>
       </h6>
     </div>
   </div>
